# Impacta-Health-

./: README.md  dev-requirements.txt  makefile  manage.py  pyproject.toml  requirements.txt
appointments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_remove_appointment_datetime_appointment_date_and_more.py  0003_alter_appointment_options_and_more.py
appointments/static/css/: awesome.css  carousel.css  flaticon.css  slicknav.css  styleform.css
appointments/static/js/: main.js
appointments/templates/appointments/: appointments.html  index.html  reschedule.html  schedule.html
contrib/: env-sample
locale/pt_BR/LC_MESSAGES/: django.po
logs/: config.py
project/: asgi.py  settings.py  urls.py  wsgi.py
shared/static/css/: footer.css  form.css  login.css  style.css  styles.css
shared/templates/partials/: footer.html  header.html
users/: admin.py  enums.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py
users/templates/: login.html  patient_signup.html
users/utils/: media_path.py
users/validators/: cpf_validator.py  custom_auth.py  username_validator.py
utils/: fixtures.json
